# crop-dawg

./: .gitignore  Dockerfile  README.md  api.py  crop_heads.py  db.py  docker-compose.yml  main.py  pyproject.toml
