[project]
name = "crop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "insightface>=0.7.3",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
crop = "crop_heads:main"
api = "api:main"
